feat: Implement HTML layout and styles
- Created the initial HTML layout for the library app, including book display section and buttons.
- Added styles for the book elements, buttons, and overall layout using CSS.
- Integrated Google Fonts and Ionicons for enhanced UI styling.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <title>Library</title>
   </head>
-  <body></body>
+  <body>
+    <main class="main">
+      <div class="container">
+        <div class="books">
+          <div class="book">
+            <div class="book-info">
+              <p class="book-title">The Wizard of Oz</p>
+              <p class="book-author">J.K. Rowling</p>
+              <p class="book-page">147 pages</p>
+            </div>
+            <div class="book-btn-utils">
+              <button
+                class="btn-util btn-toggle-read-status"
+                aria-label="read status"
+                title="Read Status"
+              >
+                <ion-icon name="book-outline" class="icon"></ion-icon>
+              </button>
+              <button
+                class="btn-util btn-delete-book"
+                aria-label="delete book"
+                title="Delete Book"
+              >
+                <ion-icon name="trash-outline" class="icon"></ion-icon>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button
+        class="btn-add-book"
+        aria-label="Add New Book"
+        title="Add New Book"
+      >
+        <ion-icon name="add-outline" class="icon"></ion-icon>
+        <script
+          type="module"
+          src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script
+          nomodule
+          src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+        ></script>
+      </button>
+    </main>
+  </body>
 </html>
