--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
   <body>
     <main class="main">
       <div class="container">
-        <div class="books">
+        <div class="books"></div>
+        <button
+          class="btn-add-book"
+          aria-label="Add New Book"
+          title="Add New Book"
+        >
+          <ion-icon name="add-outline" class="icon"></ion-icon>
+        </button>
       </div>
-      <button
-        class="btn-add-book"
-        aria-label="Add New Book"
-        title="Add New Book"
-      >
-        <ion-icon name="add-outline" class="icon"></ion-icon>
-      </button>
     </main>
 
     <script
-          type="module"
-          src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-        ></script>
-        <script
-          nomodule
-          src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-        ></script>
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
