fix: Move add book button outside of <main> for semantic correctness

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     <main class="main">
       <div class="container">
         <div class="books"></div>
-        <button
-          class="btn-add-book"
-          aria-label="Add New Book"
-          title="Add New Book"
-        >
-          <ion-icon name="add-outline" class="icon"></ion-icon>
-        </button>
       </div>
     </main>
+
+    <button class="btn-add-book" aria-label="Add New Book" title="Add New Book">
+      <ion-icon name="add-outline" class="icon"></ion-icon>
+    </button>
 
     <script
       type="module"
